# vcpkg-cmake-experiment

./: .gitignore  AutoVcpkg.cmake  CMakeLists.txt  LICENSE  MyWSLToolchain.cmake  build.bat  build.sh
_test/: catch-test.cpp
